--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>全世界地震マップ（東京中心、プロット調整）</title>
+  <title>全世界地震マップ（スクロール対応）</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,14 +23,13 @@
     const map = L.map('map', {
       center: tokyo,
       zoom: 3,
-      worldCopyJump: true  // 🌍 重要！地図の折り返し処理を自動で行う
+      worldCopyJump: true
     });
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    let geojsonLayer;
     const url = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_day.geojson';
 
     function getColor(mag) {
@@ -41,7 +40,6 @@
     }
 
     function adjustLongitude(lon) {
-      // 東京経度139.6917を中心に調整：差が180を超える場合は反転
       const tokyoLon = 139.6917;
       let diff = lon - tokyoLon;
       if (diff > 180) lon -= 360;
@@ -49,24 +47,25 @@
       return lon;
     }
 
+    const earthquakeLayer = L.layerGroup().addTo(map);
+
     function updateEarthquakes() {
       fetch(url)
         .then(response => response.json())
         .then(data => {
-          if (geojsonLayer) {
-            map.removeLayer(geojsonLayer);
-          }
+          earthquakeLayer.clearLayers();
 
-          // 経度を調整したGeoJSONを作成
-          data.features.forEach(f => {
-            f.geometry.coordinates[0] = adjustLongitude(f.geometry.coordinates[0]);
-          });
+          data.features.forEach(feature => {
+            const coords = feature.geometry.coordinates;
+            const baseLon = adjustLongitude(coords[0]);
+            const lat = coords[1];
+            const mag = feature.properties.mag;
 
-          geojsonLayer = L.geoJSON(data, {
-            pointToLayer: function(feature, latlng) {
-              const mag = feature.properties.mag;
-              return L.circleMarker(latlng, {
-                radius: Math.pow(mag, 1.5),
+            // 中心・+360度・-360度の3箇所に描画
+            [-360, 0, 360].forEach(offset => {
+              const lon = baseLon + offset;
+              const circle = L.circleMarker([lat, lon], {
+                radius: 2 + Math.pow(mag, 1.3),
                 fillColor: getColor(mag),
                 color: "#000",
                 weight: 1,
@@ -77,8 +76,10 @@
                  <b>マグニチュード:</b> ${mag}<br/>
                  <b>時間:</b> ${new Date(feature.properties.time).toLocaleString()}`
               );
-            }
-          }).addTo(map);
+
+              earthquakeLayer.addLayer(circle);
+            });
+          });
         });
     }
 
